--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://play-lh.googleusercontent.com/fXQVXTma1ENwAFjsxJ4IT6GntBr3RxWP3HMSLbNdvycl-0tscOQEeJIEAmehcNOt5hCp" type="image/x-icon">
-    <link rel="stylesheet" href="/www/css/styles.css">
+    <link rel="stylesheet" href="./www/css/styles.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>Rick & Morty</title>
 </head>
@@ -22,6 +22,6 @@
         <a href="https://github.com/zhuzilu"><i class="uil uil-github"></i></a>
         <a href="https://www.linkedin.com/in/lucialopezzas/"><i class="uil uil-linkedin"></i></a>
     </footer>
-    <script src="/www/js/src.js"></script>
+    <script src="./www/js/src.js"></script>
 </body>
 </html>
