--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <a href="#"><img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Rick_and_Morty.svg" alt="Rick and Morty"></a>
     <div class="search__container">
         <audio id="rick-burp">
-            <source src="/www/assets/rick-burp.mp3" type="audio/mp3">
+            <source src="/assets/rick-burp.mp3" type="audio/mp3">
         </audio>
         <button class="rick-icon"><img class="search__icon" src="https://play-lh.googleusercontent.com/fXQVXTma1ENwAFjsxJ4IT6GntBr3RxWP3HMSLbNdvycl-0tscOQEeJIEAmehcNOt5hCp" alt=""></button>
         <input type="search" id="search" placeholder="Search" data-search>
